Fixed the new mobile nav icon position on tablet and phone. Also worked on repositioning images and text on homepage in mobile view

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -231,28 +231,56 @@ footer {
 
 /*----Media Queries */
 
-@media screen and (max-width: 1150px) {
+@media screen and (max-width: 1023px) {
+.mobile-nav {
+    padding-left: 40%;
+    padding-top: 10%;
+}
+ 
+.nav-position {
+    padding: 15% 40% 0% 0%;
+    margin: 0%;
+}    
   
-  .topnav.responsive a {
-    float: none;
-    display: block;
-    text-align: left;
-  }
 .nav-position ul {
-    padding: 25% 0px 0px 45%;
+    padding: 0px;
     margin: 0px;
 }
 .mobile-logo-pos {
     padding-left: 15%;
 }
 
+.mobile-banner {
+    max-height: 50%;
+}
+
 .quote-box-size {
-    padding-left: 7%;
-    padding-bottom: 0%
+    padding: 7%;
+
 }    
-.searchbar-box {
-    padding-left: 10%;
-    padding-bottom: 7%;
+
+h2 {
+    font-size: 20px;
+}
+
+h3 {
+    font-size: 18px;
+}
+
+.mobile-gallery {
+    max-height: 200px;
+    max-width: 90%;
+    padding: 5%;
+    margin: 0%;
+}
+
+.gallery-caption {
+    overflow: auto;
+    text-align: center;
+}
+
+.mobile-caption {
+    max-width: 90%;
 }
 }
 
@@ -261,13 +289,25 @@ footer {
     height: 150%;
     padding: 5%;
 }
+
+.mobile-logo-pos {
+    padding-left: 10%;    
+
+}
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 414px) {
+.mobile-nav {
+    padding-top: 0%;
+    padding-left: 30%;
+    background-color: #91C7B1;
+}
+
 .nav-position ul {
-    padding: 50% 0px 0px 50%;
+    padding: 0px;
     margin: 0px;
 }
+
 .footer-padding {
     margin: 0px;
     padding: 0px;
@@ -303,19 +343,15 @@ h5 {
     max-width: 3%;
 }
 
-.quote-mobile {
-    padding: 10%;
-}
-
-.mobile-search {
-    padding-left: 10%;
-    padding-bottom: 10%;
-}
-
 .mobile-gallery {
     max-height: 250px;
-    padding: 5% 4% 2% 2%;
+    max-width: 100%;
+    padding: 5% 5% 2% 2%;
     margin: 0%;
+}
+
+.mobile-caption {
+    max-width: 100%;
 }
 
 }
